Fix sort alignment

--- a/assets/component-facets.css
+++ b/assets/component-facets.css
@@ -80,6 +80,7 @@
 }
 
 .facet-filters__sort {
+  border: 0;
   font-size: 1.4rem;
   height: auto;
   line-height: calc(1 + 0.5 / var(--font-body-scale));
